starting user controller integration tests